# frp-arduino

./: .frp.en.pws  .gitignore  .travis.yml  AUTHORS  README.md  Spec.hs  frp-arduino.cabal  make  publish  test
doc/: adding-boards.md  api.md  compile-c.md  contributing.md  developer.md  edsl.md  example-blink.md  example-double-blink.md  example-frequency-blink.md  example-intro.md  example-lcd.md  example-uart.md  examples.md  frp.md  generate_readme.py  intro.md  language.md  license.md  questions.md  resources.md  this-document.md
doc/haddock/: Arduino-Uno.html  doc-index.html  index-frames.html  index.html  mini_Arduino-Uno.html
examples/: Blink.c  Blink.hs  Combine.c  Combine.hs  DoubleBlink.c  DoubleBlink.hs  Filter.c  Filter.hs  FrequencyBlink.c  FrequencyBlink.hs  Input.c  Input.hs  LCD.c  LCD.hs  Makefile  UART.c  UART.hs  build.sh  make
makefiles/: Nano  Uno
src/: AST.hs  Arduino.hs  CCodeGen.hs  CodeGen.hs  DAG.hs  DSL.hs  Language.hs  Library.hs  Stream.hs
src/Arduino/: DSL.hs  Language.hs  Library.hs  Nano.hs  Uno.hs
src/Arduino/Internal/: CodeGen.hs  DAG.hs  DSL.hs  DotGen.hs
src/Arduino/Internal/CodeGen/: BlockDoc.hs  C.hs  Dot.hs
src/Stages/: Analyze.hs  CodeGen.hs  DSL.hs  Stream.hs
src/Types/: AST.hs  DAG.hs  Phantom.hs
