name:                frp-arduino
version:             0.1.0.1
synopsis:            Arduino programming without the hassle of C.
homepage:            http://github.com/frp-arduino/frp-arduino
license:             GPL-3
license-file:        COPYING
author:              Rickard Lindberg
maintainer:          ricli85@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Arduino.Uno
    Arduino.DSL
    Arduino.Library
    Arduino.Library.LCD
  other-modules:
    Arduino.Internal.DAG
    Arduino.Internal.CodeGen.C
    Arduino.Internal.CodeGen.Dot
    Arduino.Internal.CodeGen.BlockDoc
  build-depends:
    base == 4.*,
    mtl,
    containers
  hs-source-dirs: src
  default-language: Haskell2010
